# corrfetch

./: Cargo.toml  README.md
examples/: full.toml  nitch.toml
src/: arg_parser.rs  cfg_parser.rs  display.rs  fetch.rs  format.rs  main.rs
