[package]
name = "corrfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
console = "0.16.0"
crossterm = "0.29.0"
hostname = "0.4.1"
rascii_art = "0.4.5"
regex = "1.11.1"
serde = "1.0.219"
serde_derive = "1.0.219"
strfmt = "0.2.5"
toml = "0.9.4"
unicode-width = "0.2.1"
viuer = { version = "0.9.2", features = ["print-file"] }
